--- a/index.html
+++ b/index.html
@@ -7,23 +7,23 @@
     <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css" integrity="sha512-SzlrxWUlpfuzQ+pcUCosxcglQRNAq/DZjVsC0lE40xsADsfeQoEypE+enwcOiGjk/bSuGGKHEyjSoQ1zVisanQ==" crossorigin="anonymous" referrerpolicy="no-referrer" /> -->
     <link rel="stylesheet" href="style.css">
     <title>Mandy Cards</title>
-    <link rel="icon" href="/MandyCards/images/favicon.png">
+    <link rel="icon" href="images/favicon.png">
 </head>
 <body>
     <div class="container">
-        <div class="panel active" style="background-image: url('/MandyCards/images/gwen.jpg')">
-            <h3><p>Mandy</p>Actress & Cosplayer</h3>
+        <div class="panel active" style="background-image: url('images/gwen.jpg')">
+            <h3><p>Mandy</p>Actress & Cosplayer</h3> 
         </div>
-        <div class="panel" style="background-image: url('/MandyCards/images/harley.jpg')">
+        <div class="panel" style="background-image: url('images/harley.jpg')">
             <h3><a href="https://www.instagram.com/_mandy_rocker/" target="_blank">Instagram</a></h3>
         </div>
-        <div class="panel" style="background-image: url('/MandyCards/images/elsa.jpg')">
+        <div class="panel" style="background-image: url('images/elsa.jpg')">
             <h3><a href="https://twitter.com/Mandy_Rocker" target="_blank">Twitter</a></h3>
         </div>
-        <div class="panel" style="background-image: url('/MandyCards/images/morticia.jpg')">
+        <div class="panel" style="background-image: url('images/morticia.jpg')">
             <h3><a href="mailto:carvalhomartins.amanda@gmail.com">Contact me</a></h3>
         </div>
-        <div class="panel" style="background-image: url('/MandyCards/images/wanda.jpg')">
+        <div class="panel" style="background-image: url('images/wanda.jpg')">
         </div>
 
     <script src="script.js"></script>
